--- a/style.css
+++ b/style.css
@@ -307,3 +307,158 @@ footer .social{
 }
 
 /* login */
+#container{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+#login-h1 {
+  position: absolute;
+  top: 5%;
+  left: 10%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h2 {
+  position: absolute;
+  top: 20%;
+  left: 70%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h3 {
+  position: absolute;
+  top: 35%;
+  left: 55%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h4 {
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h5 {
+  position: absolute;
+  top: 65%;
+  left: 15%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h6 {
+  position: absolute;
+  top: 75%;
+  left: 60%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h7 {
+  position: absolute;
+  top: 10%;
+  left: 55%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h8 {
+  position: absolute;
+  top: 40%;
+  left: 5%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h9 {
+  position: absolute;
+  top: 55%;
+  left: 45%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h10 {
+  position: absolute;
+  top: 80%;
+  left: 30%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h11 {
+  position: absolute;
+  top: 15%;
+  left: 85%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h12 {
+  position: absolute;
+  top: 25%;
+  left: 40%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h13 {
+  position: absolute;
+  top: 60%;
+  left: 75%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h14 {
+  position: absolute;
+  top: 70%;
+  left: 5%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h15 {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h16 {
+  position: absolute;
+  top: 85%;
+  left: 90%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h17 {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h18 {
+  position: absolute;
+  top: 85%;
+  left: 65%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h19 {
+  position: absolute;
+  top: 12%;
+  left: 35%;
+  padding: 1.2rem 2.4rem;
+}
+
+#login-h20 {
+  position: absolute;
+  top: 95%;
+  left: 10%;
+  padding: 1.2rem 2.4rem;
+}
+.login-div{
+  width: 50vw;
+  height: 60vh;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 2px solid var(--black);
+}
