--- a/style.css
+++ b/style.css
@@ -314,6 +314,12 @@ footer .social{
   align-items: center;
   position: relative;
 }
+#container header nav{
+  background: transparent; /* light transparent background */
+  backdrop-filter: blur(7px);           /* blur effect */
+  -webkit-backdrop-filter: blur(7px);   /* for Safari support */ 
+  outline: none;
+}
 #login-h1 {
   position: absolute;
   top: 5%;
@@ -453,12 +459,100 @@ footer .social{
   left: 10%;
   padding: 1.2rem 2.4rem;
 }
-.login-div{
-  width: 50vw;
-  height: 60vh;
+.login-div {
+  width: 100%;
+  max-width: 450px;
+  min-width: 350px;
+  /* height: 60vh; */
   position: absolute;
+  padding: 55px;
+  text-align: center;
+  border-radius: 10px;
   top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 2px solid var(--black);
+  /* frosted glass / mirror effect */
+  background: rgba(255, 255, 255, 0.1); /* semi-transparent */
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px); /* for Safari */
+  border-radius: 1rem; /* optional, softer edges */
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2); /* optional depth */
+  z-index: 10;
+}
+
+i{
+  color: var(--primary-color);
+}
+.login-div h1{
+  font-family: var(--heading-font);
+  font-size: 3.0rem;
+}
+
+.login-div .underline{
+  width: 30px;
+  height: 4px;
+  background-color: var(--secondary-color);
+  margin: 10px auto 50px auto;
+  border-radius: 5px;
+  transition: transform 0.5s ease;
+}
+.input-field{
+  margin: 15px 0;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  max-height: 60px;
+  transition: max-height 0.5s ease;
+  overflow: hidden;
+}
+.input-field input{
+  width: 100%;
+  background: transparent;
+  border: 0;
+  outline: 0;
+  padding: 18px 15px;
+  color: var(--black);
+}
+.input-field i{
+  padding-left: 15px;
+}
+
+form p{
+  text-align: left;
+  font-size: 13px;
+}
+
+form p a{
+  color: var(--secondary-color);
+  font-weight: 600;
+}
+
+.btn-field{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.btn-field button{
+  flex-basis: 48%;
+  padding: 10px 0;
+  border: 0;
+  outline: 0;
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--black);
+  background-color: var(--secondary-color);
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 1s ease;
+}
+
+.input-group{
+  height: 250px;
+}
+
+button.disable{
+  background-color: var(--bg-color);
+  color: var(--black);
+  border: 1px solid var(--black);
 }
