--- a/style.css
+++ b/style.css
@@ -241,8 +241,10 @@ header .btn{
 
 #section5 img{
   width: 100%;
+  height: 300px;
   max-width: 300px;
   margin-bottom: 1.5rem;
+  border-radius: 15px;
   filter: drop-shadow(6px 15px 5px #00000018);
 }
 
@@ -256,6 +258,8 @@ header .btn{
 .product .name{
   font-size: 24px;
   font-weight: 500;
+  width: 300px;
+  height: 70px;
   filter: drop-shadow(6px 15px 5px #00000018);
   backdrop-filter: blur(10px);           /* blur effect */
   -webkit-backdrop-filter: blur(10px);
